--- a/index.html
+++ b/index.html
@@ -5,141 +5,113 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">	
 		<meta name="author" content="TAWS">
-		<meta name="description" content="">    
-		<link rel="stylesheet" type="text/css" href="css/reset.css" type="text/css">								
-		<link rel="stylesheet" type="text/css" href="css/estilo.css" type="text/css">
-		<script language="JavaScript" type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
-		<script language="JavaScript" type="text/javascript" src="js/functions.js"></script>
-		<script src="js/jquery-ui-1.8.23.custom.min.js" type="text/javascript"></script>
-		<script src="js/jquery.mousewheel.min.js" type="text/javascript"></script>
-		<script src="js/jquery.kinetic.js" type="text/javascript"></script>
-		<script src="js/jquery.smoothdivscroll-1.3-min.js" type="text/javascript"></script>
-		<script type="text/javascript">		
-			$(document).ready(function () {
-				$("div#makeMeScrollable").smoothDivScroll({
-					autoScrollingMode: ""
-				});
-			});
-		</script>
+		<meta name="description" content="Website">    
+		<link rel="stylesheet" type="text/css" href="css/reset.css">
+		<link rel="stylesheet" type="text/css" href="css/estilo.css">		
+		<script language="JavaScript" type="text/javascript" src="./js/jquery-1.9.1.min.js"></script>		
+		<link rel="shortcut icon" href="./img/favicon.ico"/>		
 	</head>
 	<body>
-		<!-- Header -->
-		<ul id="trans-nav">
-			<img src="img/taws.png" width="100%" height="100%" onclick="moveVerticalTo(position('page_one'),1000)" style="cursor: pointer;"/>
-			<label onclick="moveVerticalTo(position('page_one'),1000)" style="cursor: pointer;">TAWS</label>
-			<li onclick="moveVerticalTo(position('page_five'),1000)" style="cursor: pointer;" id="active">Contacto</li>
-			<li onclick="moveVerticalTo(position('page_four'),1000)" style="cursor: pointer;">Investigacion</li>
-			<li onclick="moveVerticalTo(position('page_tree'),1000)" style="cursor: pointer;">Miembros</li>			
-			<li onclick="moveVerticalTo(position('page_two'),1000)" style="cursor: pointer;">Quienes Somos</li>			
-			<li onclick="moveVerticalTo(position('page_one'),1000)" style="cursor: pointer;">Inicio</li>
-		</ul>
-		<div id="trans-nav-line"></div>
+		<!-- Nav Bar -->		
+		<div id="logo">
+			<img src="img/logo.png"/>
+			<label>TAWS</label>
+		</div>
+		<nav id="main_nav">
+			<ul>
+				<li>Inicio</li>
+				<li>Qui&eacute;nes Somos</li>
+				<li>Miembros</li>
+				<li>Investigaci&oacute;n</li>
+				<li>Contacto</li>
+			</ul>			
+		</nav>		
 		<!-- End -->
 		
 		<!-- Social -->
-		<a href="https://www.facebook.com/tawsespol" target="_blank">
-			<div id="facebook" title="Facebook">
-				<img src="img/facebook.png" width="100%" height="100%"/>
-			</div>
-		</a>
-		<a href="https://twitter.com/taws_espol" target="_blank">
-			<div id="twitter" title="Twitter">
-				<img src="img/twitter.png" width="100%" height="100%"/>
-			</div>
-		</a>
-		<a href="https://github.com/taws" target="_blank">
-			<div id="github" title="Github">
-				<img src="img/github.png" width="100%" height="100%"/>
-			</div>
-		</a>
-		<a href="http://feeds.feedburner.com/taws" target="_blank">
-			<div id="rss" title="RSS">
-				<img src="img/rss.png" width="100%" height="100%"/>
-			</div>
-		</a>
-		<a href="http://blog.espol.edu.ec/taws" target="_blank">
-			<div id="more" title="Blog">
-				<img src="img/more.png" width="100%" height="100%"/>
-			</div>
-		</a>
+		<div id="social_bar">
+			<a href="https://www.facebook.com/tawsespol" target="_blank">
+				<div id="facebook" title="Facebook">
+					<img src="img/facebook.png" width="100%" height="100%"/>
+				</div>
+			</a>
+			<a href="https://twitter.com/taws_espol" target="_blank">
+				<div id="twitter" title="Twitter">
+					<img src="img/twitter.png" width="100%" height="100%"/>
+				</div>
+			</a>
+			<a href="https://github.com/taws" target="_blank">
+				<div id="github" title="Github">
+					<img src="img/github.png" width="100%" height="100%"/>
+				</div>
+			</a>
+			<a href="http://feeds.feedburner.com/taws" target="_blank">
+				<div id="rss" title="RSS">
+					<img src="img/rss.png" width="100%" height="100%"/>
+				</div>
+			</a>
+			<a href="http://blog.espol.edu.ec/taws" target="_blank">
+				<div id="more" title="Blog">
+					<img src="img/more.png" width="100%" height="100%"/>
+				</div>
+			</a>
+		</div>
 		<!-- End -->
 				
 		<div id="page_one">
-			<div id="pag1Left">
-				<center>
-					<div id="tablaCentrada">
-						<table border=0>
-							<tbody>
-								<tr>
-									<td align="center" valign="middle"><img src="img/taws.png" alt="TAWS"></td>
-									<td align="center" valign="middle">
-										<h1>TAWS</h1>
-										<label class="desc-group">Grupo de investigación de tecnolog&iacute;as<br/> web y m&oacute;viles de la <strong>FIEC - ESPOL<strong></label><br>
-										<!--<button type="button" onClick="moveToRight('#page_one')">Mision y Vision</button> -->
-									</td>
-								</tr>					
-							</tbody>
-						</table>
-					</div>
-				</center>
-			</div> 
-			<div id="pag1Right">
-				<br><br><br><br><br><br>
-				<button type="button" onClick="moveToLeft('#page_one')">Volver</button>
-			</div>						
+			<img src="img/taws.png" alt="TAWS">
+			<h1>TAWS</h1>
+			<p>Grupo de investigación de tecnolog&iacute;as web y m&oacute;viles de la <strong>FIEC - ESPOL<strong></p>
+			<div id="one"></div>
 		</div>
 		<div id="page_two">
 			<p id="numero">Qui&eacute;nes <br/> Somos</p>
-			<p class="c-quienes-somos" >
+			<p class="c-quienes-somos">
 				Somos un grupo de amigos,
 				estudiantes, graduados y profesores
 				que compartimos lo que aprendemos
 				en temas relacionados al desarrollo
 				de programas en la web y dispositivos
 				móviles.
-			</p>
-			<img id="pic-members" src="img/taws-members1.png"/>
-		</div>		
-		<div id="page_tree">
-			<div id="pag3Left">
-				<p id="numero">Miembros <br/> Taws</p>
-				<img id="pic-members" src="img/taws-members2.png"/>
-				<!--<button type="button" id="botonRight" onClick="moveToRight('#page_tree')">Quiero ser un miembro taws</button> -->
-				<div id="member-list">
-					<h4>Coordinadora</h4>
+			</p>			
+			<img src="img/who.png">
+		</div>				
+		<div id="page_tree">			
+			<p id="numero">Miembros</p>			
+			<div id="member-list">
+				<h4>Coordinadora</h4>
+				<ul>
+					<li>Ing. Vanessa Cede&ntilde;o</li>
+				</ul>
+				<div  id="members-student">
+					<h4>Estudiantes</h4>
 					<ul>
-						<li>Ing. Vanessa Cede&ntilde;o</li>
+						<li>Denny Schuldt</li>
+						<li>Bryan Garc&eacute;s</li>
+						<li>Gianina Vallejo</li>											
+						<li>Alejandro Vinueza</li>
+						<li>Jos&eacute; Bed&oacute;n</li>
+						<li>Nestor Naula</li>
+						<li>Jefferson Rubio</li>
+						<li>Angel Guerra</li>
 					</ul>
-					<div  id="members-student">
-						<h4>Estudiantes</h4>
-						<ul>
-							<li>Denny Schuldt</li>
-							<li>Bryan Garc&eacute;s</li>
-							<li>Gianina Vallejo</li>
-							<li>Angel Guerra</li>
-							<li>Alejandro Vinueza</li>
-							<li>Jos&eacute; Bed&oacute;n</li>
-							<li>Jefferson Rubio</li>
-						</ul>
-					</div>
-					<div  id="members-engineer">
-						<h4> Graduados</h4>
-						<ul>
-							<li>Gustavo Salazar</li>
-							<li>Marco Calder&oacute;n</li>
-							<li>Juan Plaza</li>
-							<li>Denisse Cayetano</li>
-							<li>F&eacute;lix Rivas</li>
-							<li>Allan Avenda&ntilde;o</li>
-							<li>Gustavo Cali</li>
-							<li>Jorge Salas</li>
-						</ul>
-					</div>
 				</div>
-				<p type="button" id="bt-new-member" onClick="moveToRight('#page_tree')">C&oacute;mo ser parte de TAWS</p>
-				<!--<button type="button" id="bt-new-member" onClick="moveToRight('#page_tree')">C&oacute;mo ser parte de TAWS</button>-->
-			</div> 	
-			<div id="pag3Right">
+				<div  id="members-engineer">
+					<h4> Graduados</h4>
+					<ul>
+						<li>Gustavo Salazar</li>
+						<li>Marco Calder&oacute;n</li>
+						<li>Juan Plaza</li>
+						<li>Denisse Cayetano</li>
+						<li>F&eacute;lix Rivas</li>
+						<li>Allan Avenda&ntilde;o</li>
+						<li>Gustavo Cali</li>
+						<li>Jorge Salas</li>						
+					</ul>
+				</div>				
+			</div>
+			<img src="img/members.png">
+			<!--<div id="pag3Right">
 				<div id="fondoBlanco"></div>
 				<div id="fondo">
 					<form>
@@ -161,13 +133,12 @@
 						</fieldset>
 					</form>
 				</div>	
-			</div>
+			</div>-->
 		</div>
 		<div id="page_four">
-			<p id="numero">Investigacion</p>
+			<p id="numero">Investigaci&oacute;n</p>
 			<br/><br/>
-			<div id="makeMeScrollable">
-				<!--<div class="research-logos">-->
+			<div id="makeMeScrollable">				
 				<img src="img/html5_logo.png"/>				
 				<img src="img/git_logo.png"/>
 				<img src="img/rails_logo.png"/>
@@ -182,25 +153,40 @@
 		</div>
 		<div id="page_five">
 			<p id="numero">Contacto</p>
-			<br/><br/>
-			<div class="contact" id="pstn">
-				<div>
-					<img src="img/phone.png"/>
-					<p>593 (4) 2 269 852</p>
+			<div id="information">
+				<div class="contact" id="pstn">
+					<div>
+						<img src="img/phone.png"/>
+						<p>593 (4) 2 269 852</p>
+					</div>
 				</div>
-			</div>
-			<div class="contact" id="skype">
-				<div>
-					<img src="img/skype.png" />
-					<p>taws_espol</p>
+				<div class="contact" id="skype">
+					<div>
+						<img src="img/skype.png" />
+						<p>taws_espol</p>
+					</div>
 				</div>
-			</div>
-			<div class="contact" id="email">
-				<div>
-					<img src="img/mail.png" />         
-					<p><a href="mailto:taws@espol.edu.ec?Subject=Saludos">taws@espol.edu.ec</a></p>
+				<div class="contact" id="email">
+					<div>
+						<img src="img/mail.png" />         
+						<p><a href="mailto:taws@espol.edu.ec?Subject=Saludos">taws@espol.edu.ec</a></p>
+					</div>
 				</div>
 			</div>
 		</div>		
 	</body>
 </html>
+
+<script language="JavaScript" type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
+<script language="JavaScript" type="text/javascript" src="js/functions.js"></script>
+<script language="JavaScript" type="text/javascript" src="js/jquery-ui-1.8.23.custom.min.js"></script>
+<script language="JavaScript" type="text/javascript" src="js/jquery.mousewheel.min.js"></script>
+<script language="JavaScript" type="text/javascript" src="js/jquery.kinetic.js"></script>
+<script language="JavaScript" type="text/javascript" src="js/jquery.smoothdivscroll-1.3-min.js"></script>
+<script language="JavaScript" type="text/javascript">		
+	$(document).ready(function () {
+		$("div#makeMeScrollable").smoothDivScroll({
+			autoScrollingMode: ""
+		});
+	});
+</script>
