--- a/index.html
+++ b/index.html
@@ -12,19 +12,20 @@
 		<link rel="shortcut icon" href="./img/favicon.ico"/>		
 	</head>
 	<body>
-		<!-- Nav Bar -->		
+		<!-- Nav Bar -->
 		<div id="logo">
 			<img src="img/logo.png"/>
 			<label>TAWS</label>
 		</div>
-		<nav id="main_nav">
-			<ul>
+		<nav class="clearfix" id="main_nav">
+			<ul class="clearfix">
 				<li>Inicio</li>
 				<li>Qui&eacute;nes Somos</li>
 				<li>Miembros</li>
 				<li>Investigaci&oacute;n</li>
 				<li>Contacto</li>
-			</ul>			
+			</ul>
+			<div href="#" id="pull"></div>
 		</nav>		
 		<!-- End -->
 		
