Añadiendo Google Maps, y cambiando el estilo del texto.

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			</article>
 			<article id="page_tree">			
 				<p class="numero">Miembros</p>
-				<div id="member-list">
+				<article id="member-list">
 					<h4>Coordinadora</h4>
 					<ul>
 						<li>Ing. Vanessa Cede&ntilde;o</li>
@@ -87,7 +87,7 @@
 					<div  id="members-student">
 						<h4>Estudiantes</h4>
 						<ul>
-							<li>Denny Schuldt <a href="https://github.com/DenkSchuldt" target="_blank"><i class="icon-github-alt"></i></a></li>
+							<li>Denny K. Schuldt <a href="https://github.com/DenkSchuldt" target="_blank"><i class="icon-github-alt"></i></a></li>
 							<li>Bryan Garc&eacute;s</li>
 							<li>Gianina Vallejo</li>											
 							<li>Alejandro Vinueza</li>
@@ -95,7 +95,7 @@
 							<li>Nestor Naula</li>
 						</ul>
 					</div>
-				</div>
+				</article>
 				<div id="members">
 					<ul class="rslides">
 						<li><img src="img/members_01.png" alt=""></li>
@@ -134,19 +134,14 @@
 			</article>
 			<article id="page_four">
 				<p class="numero">Investigaci&oacute;n</p>
-				<br/><br/>
-				<!--<div id="makeMeScrollable">				
-					<img src="img/html5_logo.png"/>				
-					<img src="img/git_logo.png"/>
-					<img src="img/rails_logo.png"/>
-					<img src="img/ruby_logo.png"/>								
-					<img src="img/android_logo.png"/>
-					<img src="img/java_logo.png"/>
-					<img src="img/play_logo.png"/>
-					<img src="img/php_logo.png"/>
-				</div>
-				<img src="img/left.png" id="move-left">
-				<img src="img/right.png" id="move-right">-->
+				<img src="img/html5_logo.png"/>				
+				<img src="img/git_logo.png"/>
+				<img src="img/rails_logo.png"/>
+				<img src="img/ruby_logo.png"/>								
+				<img src="img/android_logo.png"/>
+				<img src="img/java_logo.png"/>
+				<img src="img/play_logo.png"/>
+				<img src="img/php_logo.png"/>
 			</article>
 			<article id="page_five">
 				<p class="numero">Contacto</p>
@@ -169,8 +164,10 @@
 					<div><a href="https://twitter.com/taws_espol" target="_blank"><i class="icon-twitter-sign"></i></a></div>
 					<div><a href="https://github.com/taws" target="_blank"><i class="icon-github"></i></a></div>
 				</div>
+				<iframe width="100%" height="480" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.es/maps/ms?msa=0&amp;msid=213151199185335161095.0004e6b369f95e89af4e4&amp;ie=UTF8&amp;t=m&amp;ll=-2.145266,-79.966468&amp;spn=0.005146,0.006866&amp;z=17&amp;output=embed"></iframe>
 			</article>
 		</section>
+		<footer>TAWS 2013 ©</footer>
 	</body>
 </html>
 
