--- a/index.html
+++ b/index.html
@@ -100,6 +100,10 @@
 					<ul class="rslides">
 						<li><img src="img/members_01.png" alt=""></li>
 						<li><img src="img/members_02.jpg" alt=""></li>
+						<li><img src="img/backbonejs.jpg" alt=""></li>
+						<li><img src="img/bootstrap.jpg" alt=""></li>
+						<li><img src="img/firefoxos.jpg" alt=""></li>
+						<li><img src="img/treejs.jpg" alt=""></li>
 					</ul>
 					<script>
 						$(function(){ $(".rslides").responsiveSlides({
@@ -134,14 +138,19 @@
 			</article>
 			<article id="page_four">
 				<p class="numero">Investigaci&oacute;n</p>
-				<img src="img/html5_logo.png"/>				
-				<img src="img/git_logo.png"/>
-				<img src="img/rails_logo.png"/>
-				<img src="img/ruby_logo.png"/>								
-				<img src="img/android_logo.png"/>
-				<img src="img/java_logo.png"/>
-				<img src="img/play_logo.png"/>
-				<img src="img/php_logo.png"/>
+				<div id="makeMeScrollable">
+					<img src="img/html5_logo.png"/>
+					<img src="img/git_logo.png"/>
+					<img src="img/rails_logo.png"/>
+					<img src="img/ruby_logo.png"/>								
+					<img src="img/css3_logo.png"/>
+					<img src="img/firefox-os_logo.png"/>
+					<img src="img/backbone_logo.png"/>
+					<img src="img/android_logo.png"/>
+					<img src="img/java_logo.png"/>
+					<img src="img/play_logo.png"/>
+					<img src="img/php_logo.png"/>
+				</div>
 			</article>
 			<article id="page_five">
 				<p class="numero">Contacto</p>
