--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 							<li>Bryan Garc&eacute;s</li>
 							<li>Gianina Vallejo</li>											
 							<li>Alejandro Vinueza</li>
-							<li>Jos&eacute; Bed&oacute;n</li>
+							<li>Jos&eacute; Bed&oacute;n <a href="https://www.facebook.com/jose.bedon" target="_blank"><i class="icon-facebook"></i></a><a href="https://twitter.com/jobedon" target="_blank" style="margin-left:10px;"><i class="icon-twitter"></i></a></li>
 							<li>Nestor Naula</li>
 						</ul>
 					</div>
@@ -191,7 +191,8 @@
 <script type="text/javascript">		
 	$(document).ready(function () {
 		$("div#makeMeScrollable").smoothDivScroll({
-			autoScrollingMode: ""
+			mousewheelScrolling: "allDirections",
+			autoScrollingMode: "onStart"
 		});
 	});
 </script>
