Adding new taws!

--- a/index.html
+++ b/index.html
@@ -88,11 +88,16 @@
 						<h4>Estudiantes</h4>
 						<ul>
 							<li>Denny K. Schuldt <a href="https://github.com/DenkSchuldt" target="_blank"><i class="icon-github-alt"></i></a></li>
-							<li>Bryan Garc&eacute;s</li>
-							<li>Gianina Vallejo</li>											
-							<li>Alejandro Vinueza</li>
-							<li>Jos&eacute; Bed&oacute;n <a href="https://www.facebook.com/jose.bedon" target="_blank"><i class="icon-facebook"></i></a><a href="https://twitter.com/jobedon" target="_blank" style="margin-left:10px;"><i class="icon-twitter"></i></a></li>
 							<li>Nestor Naula</li>
+							<li>Jeffserson Cunalata <a href="https://www.facebook.com/jefferson.cunalata" target="_blank"><i class="icon-facebook"></i></a></li>
+							<li>Mayra Moreira <a href="https://www.facebook.com/mayritaa18" target="_blank"><i class="icon-facebook"></i></a></li>
+							<li>Hernan Ullon <a href="https://github.com/hernan06" target="_blank"><i class="icon-github-alt"></i></a></li>
+							<li>Angely Oyola</li>
+							<li>Xavier Villacres <a href="https://www.facebook.com/xavier.villa.921" target="_blank"><i class="icon-facebook"></i></a></li>
+							<li>Jos&eacute; Bed&oacute;n <a href="https://www.facebook.com/jose.bedon" target="_blank"><i class="icon-facebook"></i></a></li>
+							<li>Alejandro Vinueza</li>
+							<li>Bryan Garc&eacute;s</li>
+							<li>Gianina Vallejo</li>
 						</ul>
 					</div>
 				</article>
@@ -100,6 +105,7 @@
 					<ul class="rslides">
 						<li><img src="img/members_01.png" alt=""></li>
 						<li><img src="img/members_02.jpg" alt=""></li>
+						<li><img src="img/members_03.jpg" alt=""></li>
 						<li><img src="img/backbonejs.jpg" alt=""></li>
 						<li><img src="img/bootstrap.jpg" alt=""></li>
 						<li><img src="img/firefoxos.jpg" alt=""></li>
@@ -141,11 +147,12 @@
 				<div id="makeMeScrollable">
 					<img src="img/html5_logo.png"/>
 					<img src="img/git_logo.png"/>
-					<img src="img/rails_logo.png"/>
-					<img src="img/ruby_logo.png"/>								
+					<img src="img/sketchup_logo.png"/>
 					<img src="img/css3_logo.png"/>
 					<img src="img/firefox-os_logo.png"/>
 					<img src="img/backbone_logo.png"/>
+					<img src="img/rails_logo.png"/>
+					<img src="img/ruby_logo.png"/>
 					<img src="img/android_logo.png"/>
 					<img src="img/java_logo.png"/>
 					<img src="img/play_logo.png"/>
