--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 	<head>
 		<title>TAWS Group</title>
 		<meta charset="UTF-8">
@@ -8,11 +8,12 @@
 		<meta name="description" content="TAWS Group">
 		<meta name="Keywords" content="HTML5, CSS3, Javascript, Jquery, TAWS, ESPOL, FIEC"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet prefetch" href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css">
+		<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 		<link href="css/reset.css" rel="stylesheet" media="screen" type="text/css">
 		<link href="css/estilo.css" rel="stylesheet" media="screen" type="text/css">
 		<script src="js/jquery-1.9.1.min.js" type="text/javascript"></script>
 		<link rel="shortcut icon" href="./img/favicon.ico"/>
+		<script src="http://d3js.org/d3.v3.min.js"></script>
 	</head>
 	<body>
 		<header>
@@ -21,14 +22,15 @@
 		</header>
 		<nav role="navigation">
 			<ul>
-				<li><i class="icon-home i"></i> <a href="#">Inicio</a></li>
-				<li><i class="icon-info-sign i"></i> <a href="#">Qui&eacute;nes Somos</a></li>
-				<li><i class="icon-group i"></i> <a href="#">Miembros</a></li>
-				<li><i class="icon-code i"></i> <a href="#">Investigaci&oacute;n</a></li>
-				<li><i class="icon-envelope i"></i> <a href="#">Contacto</a></li>
+				<li class="selected"><i class="fa fa-home"></i> <a href="#">Inicio</a></li>
+				<li><i class="fa fa-info-circle"></i> <a href="#">Qui&eacute;nes Somos</a></li>
+				<li><i class="fa fa-users"></i> <a href="#">Miembros</a></li>
+				<li><i class="fa fa-book"></i> <a href="#">Investigaci&oacute;n</a></li>
+				<!--<li><i class="fa fa-code"></i> <a href="#">Desarrollo</a></li>-->
+				<li><i class="fa fa-envelope"></i> <a href="#">Contacto</a></li>
 			</ul>
 		</nav>
-		<div class="nav-toggle"><i class="icon-th"></i></div>
+		<div class="nav-toggle"><i class="fa fa-bars"></i></div>
 		<aside>
 			<div id="facebook" title="Facebook"><img src="img/facebook.png" width="100%" height="100%"/></div>
 			<div id="twitter" title="Twitter"><img src="img/twitter.png" width="100%" height="100%"/></div>
@@ -66,7 +68,7 @@
 			</article>
 			<article id="page_tree">			
 				<p class="numero">Miembros</p>
-				<article id="member-list">
+				<div id="member-list">
 					<h4>Coordinadora</h4>
 					<ul>
 						<li>Ing. Vanessa Cede&ntilde;o</li>
@@ -74,8 +76,8 @@
 					<div  id="members-engineer">
 						<h4> Graduados</h4>
 						<ul>
-							<li>Gustavo Salazar <a href="https://github.com/gugat" target="_blank"><i class="icon-github-alt"></i></a></li>
-							<li>Marco Calder&oacute;n <a href="https://github.com/MarkosCalderon" target="_blank"><i class="icon-github-alt"></i></a></li>
+							<li>Gustavo Salazar <a href="https://github.com/gugat" target="_blank"><i class="fa fa-github-alt"></i></a></li>
+							<li>Marco Calder&oacute;n <a href="https://github.com/MarkosCalderon" target="_blank"><i class="fa fa-github-alt"></i></a></li>
 							<li>Juan Plaza</li>
 							<li>Denisse Cayetano</li>
 							<li>F&eacute;lix Rivas</li>
@@ -87,25 +89,28 @@
 					<div  id="members-student">
 						<h4>Estudiantes</h4>
 						<ul>
-							<li>Denny K. Schuldt <a href="https://github.com/DenkSchuldt" target="_blank"><i class="icon-github-alt"></i></a></li>
+							<li>Denny K. Schuldt <a href="https://github.com/DenkSchuldt" target="_blank"><i class="fa fa-github-alt"></i></a></li>
+							<li>Bryan Garcés <a href="https://twitter.com/brgarces" target="_blank"><i class="fa fa-twitter"></i></a></li>
+							<li>Estefanía Lozano <a href="https://www.facebook.com/onazol11" target="_blank"><i class="fa fa-facebook"></i></a></li>
+							<li>Jeffserson Cunalata <a href="https://www.facebook.com/jefferson.cunalata" target="_blank"><i class="fa fa-facebook"></i></a></li>
+							<li>Hernan Ullon <a href="https://github.com/hernan06" target="_blank"><i class="fa fa-github-alt"></i></a></li>
+							<li>José Bedón <a href="https://www.facebook.com/jose.bedon" target="_blank"><i class="fa fa-facebook"></i></a></li>
+							<li>Juan Lucín <a href="https://twitter.com/jlucinf" target="_blank"><i class="fa fa-twitter"></i></a></li>
 							<li>Nestor Naula</li>
-							<li>Jeffserson Cunalata <a href="https://www.facebook.com/jefferson.cunalata" target="_blank"><i class="icon-facebook"></i></a></li>
-							<li>Mayra Moreira <a href="https://www.facebook.com/mayritaa18" target="_blank"><i class="icon-facebook"></i></a></li>
-							<li>Hernan Ullon <a href="https://github.com/hernan06" target="_blank"><i class="icon-github-alt"></i></a></li>
 							<li>Angely Oyola</li>
-							<li>Xavier Villacres <a href="https://www.facebook.com/xavier.villa.921" target="_blank"><i class="icon-facebook"></i></a></li>
-							<li>Jos&eacute; Bed&oacute;n <a href="https://www.facebook.com/jose.bedon" target="_blank"><i class="icon-facebook"></i></a></li>
+							<li>Xavier Villacres <a href="https://www.facebook.com/xavier.villa.921" target="_blank"><i class="fa fa-facebook"></i></a></li>
+							<li>Mayra Moreira <a href="https://www.facebook.com/mayritaa18" target="_blank"><i class="fa fa-facebook"></i></a></li>
 							<li>Alejandro Vinueza</li>
-							<li>Bryan Garc&eacute;s</li>
 							<li>Gianina Vallejo</li>
 						</ul>
 					</div>
-				</article>
+				</div>
 				<div id="members">
 					<ul class="rslides">
 						<li><img src="img/members_01.png" alt=""></li>
 						<li><img src="img/members_02.jpg" alt=""></li>
 						<li><img src="img/members_03.jpg" alt=""></li>
+						<li><img src="img/members_04.jpg" alt=""></li>
 						<li><img src="img/backbonejs.jpg" alt=""></li>
 						<li><img src="img/bootstrap.jpg" alt=""></li>
 						<li><img src="img/firefoxos.jpg" alt=""></li>
@@ -118,29 +123,6 @@
 						}); });
 					</script>
 				</div>
-				<!--<div id="pag3Right">
-					<div id="fondoBlanco"></div>
-					<div id="fondo">
-						<form>
-							<fieldset>
-								<legend>Acerca de ti:</legend><br/><br/>
-								<label>Tu Nombre (Requerido)</label>
-								<input class="texto" type='text' name="txtNombre">
-								<label>Tu Email (Requerido)</label>
-								<input class="texto" type='text' name="txtMail">
-								<label>Carrera</label>
-								<input class="texto" type='text' name="txtCarrera">
-								<label>Lenguaje de programación que mejor manejas</label>
-								<input class="texto" type='text' name="txtCarrera">
-								<label>¿Por qué quieres ingresar a TAWS?</label>
-								<textarea type='text'></textarea>
-								<br/><br/><br/>
-								<button type="button" onClick="alertar()">Enviar</button>
-								<button type="button" onClick="moveToLeft('#page_tree')">Cancelar</button>				
-							</fieldset>
-						</form>
-					</div>	
-				</div>-->
 			</article>
 			<article id="page_four">
 				<p class="numero">Investigaci&oacute;n</p>
@@ -159,34 +141,36 @@
 					<img src="img/php_logo.png"/>
 				</div>
 			</article>
+			<!--<article id="page_five">
+				<p class="numero">Desarrollo</p>
+			</article>-->
 			<article id="page_five">
 				<p class="numero">Contacto</p>
 				<div id="information">
 					<div class="contact" id="phone">
-						<h1><i class="icon-phone-sign"></i></h1>
+						<h1><i class="fa fa-phone-square"></i></h1>
 						<p>593 (4) 2 269 852</p>
 					</div>
 					<div class="contact" id="skype">
-						<h1><i class="icon-skype"></i></h1>
+						<h1><i class="fa fa-skype"></i></h1>
 						<p>taws_espol</p>
 					</div>
 					<div class="contact" id="email">
-						<h1><i class="icon-envelope"></i></h1>
+						<h1><i class="fa fa-envelope"></i></h1>
 						<p>taws@espol.edu.ec</p>
 					</div>
 				</div>
 				<div class="social">
-					<div><a href="https://www.facebook.com/tawsespol" target="_blank"><i class="icon-facebook-sign"></i></a></div>
-					<div><a href="https://twitter.com/taws_espol" target="_blank"><i class="icon-twitter-sign"></i></a></div>
-					<div><a href="https://github.com/taws" target="_blank"><i class="icon-github"></i></a></div>
+					<div><a href="https://www.facebook.com/tawsespol" target="_blank"><i class="fa fa-facebook"></i></a></div>
+					<div><a href="https://twitter.com/taws_espol" target="_blank"><i class="fa fa-twitter"></i></a></div>
+					<div><a href="https://github.com/taws" target="_blank"><i class="fa fa-github-alt"></i></a></div>
 				</div>
 				<iframe width="100%" height="480" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.es/maps/ms?msa=0&amp;msid=213151199185335161095.0004e6b369f95e89af4e4&amp;ie=UTF8&amp;t=m&amp;ll=-2.145266,-79.966468&amp;spn=0.005146,0.006866&amp;z=17&amp;output=embed"></iframe>
 			</article>
 		</section>
-		<footer>TAWS 2013 ©</footer>
+		<footer>&copy; 2014 TAWS</footer>
 	</body>
 </html>
-
 <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script src="js/responsiveslides.min.js"></script>
@@ -195,6 +179,7 @@
 <script type="text/javascript" src="js/jquery.mousewheel.min.js"></script>
 <script type="text/javascript" src="js/jquery.kinetic.js"></script>
 <script type="text/javascript" src="js/jquery.smoothdivscroll-1.3-min.js"></script>
+<script type="text/javascript" src="js/trianglify.min.js"></script>
 <script type="text/javascript">		
 	$(document).ready(function () {
 		$("div#makeMeScrollable").smoothDivScroll({
