--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
 			<article id="page_tree">			
 				<p class="numero">Miembros</p>
 				<div id="member-list">
+					<h4>Fundadora</h4>
+					<ul>
+						<li>Ing. Carmen Vaca</li>
+					</ul>
+					<br>
 					<h4>Coordinadora</h4>
 					<ul>
 						<li>Ing. Vanessa Cede&ntilde;o</li>
