--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<section>
 			<article id="page_one">
 				<img id="taws_home_img" src="img/taws.png" alt="TAWS">
-				<h1>Grupo de investigación de tecnolog&iacute;as web y m&oacute;viles de la <br><strong>FIEC - ESPOL<strong></h1>
+				<h1>Grupo de investigación de tecnolog&iacute;as web y m&oacute;viles de la <strong>ESPOL</strong></h1>
 			</article>
 			<article id="page_two">
 				<h2 class="numero">Qui&eacute;nes <br/> Somos</h2>
@@ -97,10 +97,11 @@
 							<li>Denny K. Schuldt <a href="https://github.com/DenkSchuldt" target="_blank"><i class="fa fa-github-alt"></i></a></li>
 							<li>Bryan Garcés <a href="https://twitter.com/brgarces" target="_blank"><i class="fa fa-twitter"></i></a></li>
 							<li>Estefanía Lozano <a href="https://www.facebook.com/onazol11" target="_blank"><i class="fa fa-facebook"></i></a></li>
-							<li>Jeffserson Cunalata <a href="https://www.facebook.com/jefferson.cunalata" target="_blank"><i class="fa fa-facebook"></i></a></li>
+							<li>Jefferson Cunalata <a href="https://www.facebook.com/jefferson.cunalata" target="_blank"><i class="fa fa-facebook"></i></a></li>
 							<li>Hernan Ullon <a href="https://github.com/hernan06" target="_blank"><i class="fa fa-github-alt"></i></a></li>
 							<li>José Bedón <a href="https://www.facebook.com/jose.bedon" target="_blank"><i class="fa fa-facebook"></i></a></li>
 							<li>Juan Lucín <a href="https://twitter.com/jlucinf" target="_blank"><i class="fa fa-twitter"></i></a></li>
+							<li>Jacqueline Ramos <a href="https://twitter.com/JackieRamosM" target="_blank"><i class="fa fa-twitter"></i></a></li>
 							<li>Nestor Naula</li>
 							<li>Angely Oyola</li>
 							<li>Xavier Villacres <a href="https://www.facebook.com/xavier.villa.921" target="_blank"><i class="fa fa-facebook"></i></a></li>
@@ -128,6 +129,7 @@
 						}); });
 					</script>
 				</div>
+				<p id="postulante">¿Quieres ser parte de TAWS? Puedes postularte <a href="https://docs.google.com/forms/d/1LdbKSqfUUXYKxmm_wk2JfM3MeAAzI6z_T7U637srQIk/viewform" target="_blank">aqu&iacute;</a>.</p>
 			</article>
 			<article id="page_four">
 				<p class="numero">Investigaci&oacute;n</p>
